--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,4 +1,5 @@
 <h1 [ngStyle]={align:center}>Student Details</h1>
+<!-- table dealration -->
 <table class="table">
         <thead>
           <tr>
@@ -11,6 +12,7 @@
           </tr>
         </thead>
   <tbody>
+    <!-- iterating the studentlist array -->
     <tr *ngFor="let student of studentList;let i = index" [attr.data-index]="i">
       <td>{{i+1}}</td>
       <td>{{student.name}}</td>
